- fixes "%" rendering bug in copyrights (unfiltered defaults in grain_getoption()) - renamed some templates to better distinguish them from WordPress' own names for certain files - cleaned up footer.php by introducing some new helper functions - added CC embedding function - added feed icon embedding function - introduced GRAIN_TEMPLATE_DIR define - moved sidebar definitions to own file and added CSS styles to better distinguish their position - little change in copyright functions to prevent trailing spaces
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@11 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+0.2.3 -- currently in development
+Add: Sidebars now have additional CSS styles applied describing their position
+Fix: "%" in copyrights is now correctly rendered as the current year. This was due to bug preventing that an options default value got filtered.
+
 0.2.2 
 Fix: Menu bug that appeared on the start page. 
 
