- tidied up header.menu.php - fixed the issue that navigation and edit links were shown even when no post there - changed html "theme" meta header so that it is prepended by "dev" if the theme is taken from a development branch
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@12 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 0.2.3 -- currently in development
 Add: Sidebars now have additional CSS styles applied describing their position
 Fix: "%" in copyrights is now correctly rendered as the current year. This was due to bug preventing that an options default value got filtered.
+Fix: Navigation bar was shown even if there were no post at all
+Fix: "Edit" link was shown to administrative users even if there were no post at all
+Add: Grain version number now is extended by "dev" in the HTML header if it was taken from a development branch
 
 0.2.2 
 Fix: Menu bug that appeared on the start page. 
