--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Fix: Navigation bar was shown even if there were no post at all
 Fix: "Edit" link was shown to administrative users even if there were no post at all
 Add: Grain version number now is extended by "dev" in the HTML header if it was taken from a development branch
 Fix: Rounded borders had different colors in Internet Explorer 6 and 7 (this is not totally fixed yet, but it definitely looks better)
+Add: The administration now shows an error message if YAPB was not installed.
 
 0.2.2 
 Fix: Menu bug that appeared on the start page. 
