--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-0.3 -- currently in development
+﻿0.3 -- currently in development
 Add: Sidebars now have additional CSS styles applied describing their position
 Add: Grain version number now is extended by "dev" in the HTML header if it was taken from a development branch
 Add: The administration now shows an error message if YAPB was not installed.
@@ -19,8 +19,8 @@ Change: Checkbox texts (right of the box) are now labels, too (users may change 
 Change: CSS: Rounded corners in CSS now automatically move depending on the header height; This doesn't have to be tweaked separately anymore
 Change: CSS: some elements such as header and blog title are now wrapped in additional divs
 Change: Blog description line is now linked, too
-Change: Grain now shows only the excerpt of a post when displaying a photo page. The full text will be displayed as soon as the page enters extended info mode 
-		(or on the popup, if the "only excerpts" option is not set)
+Change: Grain now shows only the excerpt of a post when displaying a photo page. The full text will be displayed as soon as the page enters extended info mode (or on the popup, if the "only excerpts" option is not set)
+Change: CSS footer now resizes automatically depending on it's content (no height hardcoding needed anymore)
 Fix: Rounded borders had different colors in Internet Explorer 6 and 7 (this is not totally fixed yet, but it definitely looks better)
 Fix: "%" in copyrights is now correctly rendered as the current year. This was due to bug preventing that an options default value got filtered.
 Fix: Navigation bar was shown even if there were no post at all
