Grain 0.3 dev is working and can be considered beta
- moved index.php logic to func/content.php
- posts without an image are now shown in archives and the mosaic.php
- added NOINDEX meta to the comment popup
- added "navigation-bottom" and "navigation-top" IDs to the navigation links on the archive and mosaic
- renamed the "show comments"/"hide comments" texts
- changed some option defaults
- added a function to inject a error combined with the search form
- fixed some errors in header.menu.php that prevented about/mosaic/newest links to show up on pages
- added some localizations to page.php
- changed some basic styles, e.g the calendar

git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@52 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,7 @@ Change: CSS: some elements such as header and blog title are now wrapped in addi
 Change: Blog description line is now linked, too
 Change: Grain now shows only the excerpt of a post when displaying a photo page. The full text will be displayed as soon as the page enters extended info mode (or on the popup, if the "only excerpts" option is not set)
 Change: CSS footer now resizes automatically depending on it's content (no height hardcoding needed anymore)
+Change: Posts without an image are now shown in the archives and the mosaic, but are not linked
 Fix: Rounded borders had different colors in Internet Explorer 6 and 7 (this is not totally fixed yet, but it definitely looks better)
 Fix: "%" in copyrights is now correctly rendered as the current year. This was due to bug preventing that an options default value got filtered.
 Fix: Navigation bar was shown even if there were no post at all
