add: implicit option to disable the limitation of items displayed on a mosaic page
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@75 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,7 @@ Add: Option to control access to the comment form if a photo page has no content
 Add: Option to only show the excerpt of a post on the comment popup.
 Add: Autolocale option to load a translation based on a request's HTTP_ACCEPT_LANGUAGE setting
 Add/Change: Several new localization strings; Old strings have changed. (added i.e. date/time formats, so that their defaults can be localized too)
+Add/Change: The number of photos displayed on the mosaic page can now be unlimited by setting a negative value or zero as the number of items to display
 Change: Option to show popup is now option to suppress popup because of new business logic; The setting is interpreted correctly though.
 Change: Reordered navigation bar page.
 Change: Changed defaults so that some options are now enabled by default (newest, random link etc.)
