--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,7 @@ Add: Error messages (no post, photo not found, ...) can now be styled (in additi
 Add: Option to control access to the comment form if a photo page has no content
 Add: Option to only show the excerpt of a post on the comment popup.
 Add: Autolocale option to load a translation based on a request's HTTP_ACCEPT_LANGUAGE setting
+Add: Grain options link in the "settings" section of the WP administration
 Add/Change: Several new localization strings; Old strings have changed. (added i.e. date/time formats, so that their defaults can be localized too)
 Add/Change: The number of photos displayed on the mosaic page can now be unlimited by setting a negative value or zero as the number of items to display
 Add/Change: Localization files are now searched in the ./lang subdirectory
