fixed the navigation arrows so that they are displayed in IE(7), too
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@83 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,7 @@ Add: Grain options link in the "settings" section of the WP administration
 Add/Change: Several new localization strings; Old strings have changed. (added i.e. date/time formats, so that their defaults can be localized too)
 Add/Change: The number of photos displayed on the mosaic page can now be unlimited by setting a negative value or zero as the number of items to display
 Add/Change: Localization files are now searched in the ./lang subdirectory
+Add/Change: Added hovering arrows for the on-image navigation
 Change: Option to show popup is now option to suppress popup because of new business logic; The setting is interpreted correctly though.
 Change: Reordered navigation bar page.
 Change: Changed defaults so that some options are now enabled by default (newest, random link etc.)
