--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -43,6 +43,7 @@ Fix: The "newest" link was displayed on the newest entry, if it was not accessed
 Fix: "newest" is now disabled if there is no or only one (public) post
 Fix: "random" is now disabled if there is no or only up to two (public) posts
 Fix: "random" now only selects pages other the one that is currently opened
+Fix: Reflection may had display errors on systems with non-english or invariant locale
 
 0.2.2 
 Fix: Menu bug that appeared on the start page. 
