added reading and writing of per-post options
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/branches/per-post-options@116 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,7 @@ Add: EXIF data filtering prevents (some) byte data to display, strips long field
 Add: Additional phpThumb() configuration options can now be set in the administration
 Add: Option to hide the sidebar on the mosaic page
 Add: A negative value for the mosaic thumbnail size (width or height) will be interpreted as "do not set", thus auto-width (or auto-height) mosaic thumbnails are possible.
+Add: Per-post options
 Add/Change: Several new localization strings; Old strings have changed. (added i.e. date/time formats, so that their defaults can be localized too)
 Add/Change: The number of photos displayed on the mosaic page can now be unlimited by setting a negative value or zero as the number of items to display
 Add/Change: Localization files are now searched in the ./lang subdirectory
