--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,8 @@ Add: EXIF data can now be rendered inline
 Add: EXIF data filtering prevents (some) byte data to display, strips long fields and renders float values correctly
 Add: Additional phpThumb() configuration options can now be set in the administration
 Add: Option to hide the sidebar on the mosaic page
+Add: Mosaic posts can now be displayed in a random order
+Add: Option to skip or show posts without photos at the mosaic
 Add: A negative value for the mosaic thumbnail size (width or height) will be interpreted as "do not set", thus auto-width (or auto-height) mosaic thumbnails are possible.
 Add: Per-post options
 Add/Change: Several new localization strings; Old strings have changed. (added i.e. date/time formats, so that their defaults can be localized too)
