new language file, updates CHANGES.txt and fixed raquo error in the translations
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@170 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -31,6 +31,7 @@ Add/Change: The number of photos displayed on the mosaic page can now be unlimit
 Add/Change: Localization files are now searched in the ./lang subdirectory
 Add/Change: Added hovering arrows for the on-image navigation
 Add/Change: Grain is now recognizing override stylesheets following the scheme style.override[.-]<name>.css.php and style.override[.-]<name>.pcss, too
+Add/Change: Grain settings have now moved to their own top-level menu
 Change: Grain options can now be found in a top-level menu
 Change: Option to show popup is now option to suppress popup because of new business logic; The setting is interpreted correctly though.
 Change: Reordered navigation bar page.
