--- a/lang/fr_FR.po
+++ b/lang/fr_FR.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Grain 0.3 beta 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-06-24 11:11+0100\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Aurélien Paulus <aurelien.paulus@gmail.com>\n"
+"PO-Revision-Date: 2008-07-17 11:43+0100\n"
+"Last-Translator: Markus Mayer <i18n@defx.de>\n"
 "Language-Team: Translators of Grain <aurelien.paulus@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
