--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 ﻿0.3.1 (work in progress)
+Add: Full MediaRSS support for the Mosaic
 Fix: "Archive Sidebar" and "Navigation" not localizable
 Fix: PHP warning on the admin entry page
 
